fixed home screen font on safari

--- a/style.css
+++ b/style.css
@@ -368,6 +368,13 @@ p {
   transform: scale(50%);
   animation: htext2 1.5s ease 2s 1;
   animation-fill-mode: forwards;
+}
+
+#arrow-there-svg-text {
+  fill: transparent;
+  transform: scale(50%);
+  animation: htext2 1.5s ease 2s 1;
+  animation-fill-mode: forwards;
   font-family: "ReemKufi";
 }
 
